Resolvendo csrf_token

--- a/ecommerce/store/templates/store/checkout.html
+++ b/ecommerce/store/templates/store/checkout.html
@@ -5,6 +5,7 @@
         <div class="col-lg-6">
             <div class="box-element" id="form-wrapper">
                 <form id="form">
+                    {% csrf_token %}
                     <div id="user-info">
                         <div class="form-field">
                             <input required class="form-control" type="text" name="name" placeholder="Name..">
@@ -82,6 +83,9 @@
     }
 
     var form = document.getElementById("form")
+    csrftoken = form.getElementByTagName("imput")[0]form.city.value
+    console.log("Newtoken:", form.getElementByTagName("input")[0].value)
+
     form.addEventListener("submit", function(e){
         e.preventDefault()
         console.log("form submitted...")
